--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
     />
 
     <title>React App</title>
+    <!-- <link href="path/to/lightbox.css" rel="stylesheet" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <script src="path/to/lightbox.js"></script> -->
   </body>
 </html>
