--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="Dipps Beautifyers" content="beauty website" />
 
-    <title>React App</title>
+    <title>Dipps Beautifyers</title>
     <!-- <link href="path/to/lightbox.css" rel="stylesheet" /> -->
   </head>
   <body>
